# Parking-System

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
demos/: data_layer_demo.c  demo_parking.c  service_demo.c
src/: main.c  parking_data.c  parking_data.h  parking_service.c  parking_service.h  parking_ui.c  parking_ui.h
tests/: test_parking_data.c  test_parking_service.c  test_parking_ui.c
